# himd

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.cargo/: config.toml
.changeset/: cold-dragons-rest.md  empty-shrimps-sit.md
.claude/commands/: hi.md
.github/workflows/: release.yml
crates/himd-audio/: Cargo.toml
crates/himd-audio/src/: capture.rs  error.rs  lib.rs  playback.rs  vad.rs  wav.rs
crates/himd-audio/src/platform/: macos.rs  mod.rs  windows.rs
crates/himd-audio/tests/: capture_diagnostics.rs  platform_boundary.rs  playback.rs  vad.rs  wav.rs  windows_backend.rs
crates/himd-cli/: Cargo.toml
crates/himd-cli/src/: doctor.rs  main.rs
crates/himd-cli/tests/: audio_wiring.rs  doctor_json.rs  smoke.rs
crates/himd-core/: Cargo.toml
crates/himd-core/src/: acoustic.rs  capture.rs  errors.rs  lib.rs  provider.rs  runtime_paths.rs  tts.rs  types.rs
crates/himd-core/tests/: contract_snapshots.rs  provider_http.rs  runtime_paths.rs  tts_http.rs
crates/himd-mcp/: Cargo.toml
crates/himd-mcp/src/: lib.rs
crates/himd-mcp/tests/: capture_integration.rs
plugins/himd/: README.md  package.json
plugins/himd/.claude-plugin/: plugin.json
plugins/himd/commands/: doctor.md  hi.md  setup.md
scripts/: fallback-speak.sh  sync-plugin-manifest-version.mjs  test-audio-provider.sh  validate-plugin.mjs
