[workspace]
resolver = "2"
members = [
    "crates/himd-core",
    "crates/himd-mcp",
    "crates/himd-cli",
    "crates/himd-audio",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
himd-core = { path = "crates/himd-core" }
himd-audio = { path = "crates/himd-audio" }
himd-mcp = { path = "crates/himd-mcp" }
rmcp = { version = "0.17", features = ["server", "macros", "transport-io"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
