[package]
name = "himd-core"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Shared types for the himd voice companion"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
base64 = "0.22"
url = "2"

[dev-dependencies]
mockito = "1"
tempfile = "3"
